CloudAlpacas-repo/salesforce/main/default/objects/Game__c/Game__c.object-meta.xml
<CustomObject>
    <description>시즌별 경기 일시, 상대팀, 홈·원정 여부, 경기 상태 및 결과를 관리</description>
    <label>Game</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Games</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>