CloudAlpacas-repo/salesforce/main/default/objects/Game__c/fields/Opponent__c.field-meta.xml
<CustomField>
    <fullName>Opponent__c</fullName>
    <description>상대팀</description>
    <inlineHelpText>상대팀</inlineHelpText>
    <label>Opponent</label>
    <length>15</length>
    <type>Text</type>
</CustomField>