CloudAlpacas-repo/salesforce/main/default/objects/Game__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <description>해당 경기가 속한 시즌을 참조하며, 시즌별 진행 경기 수 집계의 기준으로 사용</description>
    <inlineHelpText>해당 경기가 속한 시즌을 선택</inlineHelpText>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Games</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>