CloudAlpacas-repo/salesforce/main/default/objects/Game__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Game_Date__c</columns>
    <columns>Opponent__c</columns>
    <columns>Home_Away__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>